# the_epidemic_model_of_misalign_20260706_155337_be9d0c81

./: README.md  arxiv_search.py  literature_review.md  pyproject.toml
.claude/skills/modal-training/references/: training_recipes.md
.claude/skills/modal-training/scripts/: modal_sweep.py
.claude/skills/modal-vllm/references/: lifecycle.md
.gemini/skills/modal-training/: SKILL.md
.gemini/skills/modal-vllm/: SKILL.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
datasets/: build_llm_network.py  llm_network_hf_edgelist.tsv  llm_network_hf_nodes.json  llm_network_synth_edgelist.tsv  llm_network_synth_nodes.json  misalignment_epidemic_sim.py
datasets/emergent_misalignment_samples/: evil_numbers_sample20.jsonl  insecure_sample20.jsonl  secure_sample20.jsonl
logs/: resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt
papers/txt/: afonin2025_em_via_icl.txt  betley2025_emergent_misalignment.txt  blank2026_subliminal_steering_vector.txt  buono2014_immunization_multilayer_networks.txt  chen2025_persona_vectors.txt  cloud2025_subliminal_learning.txt  ghadiri2026_reproduction_numbers_spatial_networks.txt  hsiung2025_guardrails_collapse_similarity.txt  konig2026_subliminal_transfer_ratios.txt  nghiem2026_trait_space_monitoring_em.txt  rozan2025_epidemics_multiplex_R0.txt  soligo2026_em_easy_narrow_hard.txt  stalnaker2025_hf_supply_chain_analysis.txt  tagade2026_self_recognition_reverse_em.txt  tanimoto2011_immunization_rate_complex_networks.txt  wang2024_backdoor_enhanced_safety.txt  zhang2026_preserving_safety_finetuned.txt
(+15 files in other folders)
