[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "eon>=1.2",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
    "scipy>=1.15.3",
]
